<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General strings -->
    <string name="version" translatable="false">2.4.2</string>
    <string name="app_name" translatable="false">Notey</string>

    <!-- MainActivity strings-->
    <string name="menu">Menu</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="no_voice_input">Voice input is not available.</string>
    <string name="speak_now">Speak now</string>
    <string name="hold_to_record">Hold to record</string>
    <string name="impossibleToDeleteAtSend">You have made it impossible to remove this note. Please go into the settings and fix this.</string>
    <string name="title">Title</string>
    <string name="quick_note">Add new note</string>
    <string name="new...">New…</string>

    <!-- Settings strings -->
    <string name="notifications">Notifications</string>
    <string name="display">Display</string>
    <string name="other">Other</string>
    <string name="notey_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="notifClick">Notification Click Action</string>
    <string name="notifClickSummary">What happens when a notification is pressed.</string>
    <string name="doNothing">Do nothing</string>
    <string name="show_info_screen">Show Info Screen</string>
    <string name="priority">Priority</string>
    <string name="prioritySummary">Where the notifications will be placed compared to other apps\' notifications.</string>
    <string name="priorityHigh">High - Noteys always at the top of notification tray</string>
    <string name="normal">Normal</string>
    <string name="priorityLow">Low - Noteys at the bottom</string>
    <string name="priorityMinimum">Minimum - Hides the icon from the status bar and keeps Noteys at the bottom</string>
    <string name="expandNotifs">Expandable Notifications</string>
    <string name="expandNotifsSummary">Allow notifications to be expandable.</string>
    <string name="swipeNotifs">Swipe to Remove</string>
    <string name="swipeNotifsSummary">Allow notifications to be deleted by swiping.</string>
    <string name="impossibleToDelete">You have made it impossible to remove any Noteys. Please change a setting to make this possible before exiting.</string>
    <string name="long_press_for_voice">Long press for voice input</string>
    <string name="long_press_for_voice_summary">Long press on microphone button to activate voice.</string>
    <string name="share_button">Share Button</string>
    <string name="share_button_summary">Adds the Share button to the expandable notifications.</string>
    <string name="shortcut">Notification Shortcut</string>
    <string name="shortcut_summary">Create new notes directly from the notification tray.</string>
    <string name="icons">Icons</string>
    <string name="icons_summary">Select which icons to choose from.</string>
    <string name="please_select_at_least_one">Please select at least one icon before continuing.</string>
    <string name="misc">Misc.</string>
    <string name="pro_options">Pro Options</string>
    <string name="theme">Theme</string>
    <string name="theme_title">Theme and Color</string>
    <string name="theme_summary">Choose your color scheme.</string>
    <string name="color_chooser">Color Chooser</string>
    <string name="dark_theme">Dark theme</string>
    <string name="appearance">Appearance</string>
    <string name="update_logo">Update Logo Color</string>
    <string name="update_to_match">Update the launcher icon to match your color scheme.</string>
    <string name="your_new_icon">Your new icon:</string>
    <string name="use_colored_icons">Colored Icons</string>
    <string name="use_colored_icons_summary">Use colored icons instead of white icon with colored background.  If you are not seeing your icons in the notification tray, try having this checked.</string>
    <string name="large_icons">Large Icons</string>
    <string name="large_icons_summary">Bigger icons in the notification tray.</string>
    <string name="open_keyboard">Open Keyboard on Start</string>
    <string name="open_keyboard_summary">Open keyboard on app launch.</string>
    <string name="accent_color">Accent Color</string>
    <string name="accent_color_summary">Choose your accent color.</string>
    <string name="default_icons_color">Default Icons Color</string>
    <string name="default_icons_color_summary">Icons color first shown on app launch.</string>
    <string name="cm_quick_tile">CM Quick Tile</string>
    <string name="cm_quick_tile_summary">Enable CyanogenMod Quick Tile</string>
    <string name="empty_note">Empty note</string>
    <string name="bullet_list">Bullet list</string>
    <string name="numbered_list">Numbered list</string>
    <string name="default_note_type">Default Note Type</string>
    <string name="default_note_type_summary">What type of note to start Notey with.</string>
    <string name="default_led_color">Default LED Color</string>
    <string name="font">Font</string>
    <string name="default_cursor">Default Cursor to \'Title\'</string>
    <string name="default_cursor_summary">Default the text cursor to \'Title\' instead of \'Note\'</string>
    <string name="expandable_notif_buttons">Expandable Notification Buttons</string>
    <string name="expandable_notif_buttons_summary">Which buttons to show for expandable notifications</string>


    <!-- About strings -->
    <string name="about">About</string>
    <string name="changelog">Changelog</string>
    <string name="changelogSummary">All the changes made since the beginning.</string>
    <string name="opensource">Open Source Licenses</string>
    <string name="opensourceSummary">License details for open source software.</string>
    <string name="verNum">Version Number</string>
    <string name="contact">Contact</string>
    <string name="email" translatable="false">noteyapp@gmail.com</string>
    <string name="rate">Rate</string>
    <string name="rateSummary">Hope you enjoy the app!</string>
    <string name="sendemail">Send email…</string>
    <string name="playstore_url">https://play.google.com/store/apps/details?id=thomas.jonathan.notey</string>
    <string name="github">GitHub</string>
    <string name="githubSummary">Track development, report bugs, request features.</string>
    <string name="github_url">https://github.com/jt19056/Notey</string>
    <string name="translations">Translations</string>
    <string name="translations_summary">Help translate Notey.</string>

    <!-- DashClock -->
    <string name="dashclock_description">Displays your current reminders.</string>
    <string name="reminders">Reminders</string>
    <string name="icon">Icon</string>
    <string name="icon_summary">Icon to be displayed on DashClock Widget.</string>
    <string name="top_icon">Your oldest note\'s icon</string>
    <string name="notey_logo">Notey logo</string>
    <string name="notey_extension_settings">Notey Extension Settings</string>
    <string name="pencil">Pencil</string>
    <string name="clipboard">Clipboard</string>
    <string name="dollar_sign">Dollar sign</string>
    <string name="book">Book</string>
    <string name="sun">Sun</string>
    <string name="phone">Phone</string>
    <string name="car">Car</string>
    <string name="calendar">Calendar</string>
    <string name="flag">Flag</string>
    <string name="lightning_bolt">Lightning bolt</string>
    <string name="drink">Drink</string>
    <string name="flower">Flower</string>
    <string name="music_note">Music Note</string>
    <string name="bell">Bell</string>
    <string name="reply_arrow">Reply arrow</string>
    <string name="spinner">Spinner</string>
    <string name="android">Android</string>
    <string name="cake">Cake</string>
    <string name="football">Footbll</string>
    <string name="lines">Lines</string>
    <string name="pin">Pin</string>

    <!-- Icons -->
    <string name="check">Check</string>
    <string name="warning">Warning</string>
    <string name="star">Star</string>
    <string name="flame">Flame</string>
    <string name="heart">Heart</string>
    <string name="smile">Smile</string>
    <string name="note">Note</string>
    <string name="shopping_cart">Shopping cart</string>

    <!-- Info Screen Activity -->
    <string name="text_copied">Text copied to clipboard.</string>
    <string name="go_back">Go back</string>
    <string name="copy">Copy</string>
    <string name="bad_url">Sorry, the URL could not be displayed.</string>

    <!-- Alarm Activity-->
    <string name="alarm">Alarm</string>
    <string name="no_alarm_set">No alarm set.</string>
    <string name="alarm_set_for">Alarm set for</string>
    <string name="alarm_deleted">Alarm deleted.</string>
    <string name="null_date">Sat, Jan 1, 2000</string>
    <string name="null_time">12:00 AM</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="vibrate">Vibrate</string>
    <string name="wake_screen">Wake Screen</string>
    <string name="alarm_not_set">Alarm not set. You chose a time in the past!</string>
    <string name="sound">Sound: </string>
    <string name="select_sound">Select reminder sound</string>
    <string name="does_not_repeat">Does not repeat</string>
    <string name="repeat_every">"Repeat every "</string>
    <string name="minutes">" minutes"</string>
    <string name="minute">" minute"</string>
    <string name="hours">" hours"</string>
    <string name="hour">" hour"</string>
    <string name="days">" days"</string>
    <string name="day">" day"</string>
    <string name="choose_alarm_type">Choose Alarm Type</string>
    <string name="notification_sound">Notification sound</string>
    <string name="alarm_beep">Alarm beep</string>
    <string name="Mins">Mins</string>
    <string name="Hours">Hrs</string>
    <string name="Days">Days</string>
    <string name="from_now">from now.</string>
    <string name="less_than_a_minute">less than a minute</string>
    <string name="led_color">LED Color:</string>

    <!-- Other -->
    <string name="undo">Undo</string>
    <string name="share">Share</string>
    <string name="none">None</string>
    <string name="no_thanks">No Thanks</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="dismiss">Dismiss</string>
    <string name="deleted">Deleted</string>
    <string name="undo_caps">UNDO</string>

    <!-- Pro -->
    <string name="go_pro">Upgrade to Pro</string>
    <string name="thank_you_for_pro">Thank you for upgrading to Pro!</string>
    <string name="thank_you_for_contribution">Thank you for your contribution and upgrading to Pro!</string>
    <string name="pro_plus_tip">Pro + Tip</string>
    <string name="pro_only">Pro Only</string>
    <string name="pro">Pro</string>
    <string name="not_a_pro">Pro features disabled.</string>
    <string name="yes_a_pro">Pro features enabled.</string>
    <string name="tip">Tip</string>
    <string name="play_store_fail">Something went wrong trying to contact the Google Play Store.</string>
    <string name="pro_features">Pro Features:</string>

</resources>