<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.jenzz.materialpreference.PreferenceCategory
        android:key="pref_key_general_settings"
        android:title="@string/notifications">

        <com.jenzz.materialpreference.Preference android:key="pref_click_notif"
            android:title="@string/notifClick"
            android:summary="@string/notifClickSummary"/>

        <com.jenzz.materialpreference.Preference android:key="pref_priority"
            android:title="@string/priority"
            android:summary="@string/prioritySummary"/>

        <com.jenzz.materialpreference.SwitchPreference
            android:defaultValue="true"
            android:key="pref_expand"
            android:summary="@string/expandNotifsSummary"
            android:title="@string/expandNotifs" />
        <com.jenzz.materialpreference.Preference android:key="pref_expandable_notif_buttons"
            android:title="@string/expandable_notif_buttons"
            android:summary="@string/expandable_notif_buttons_summary"
            android:dependency="pref_expand"/>
        <com.jenzz.materialpreference.SwitchPreference
            android:defaultValue="false"
            android:key="pref_swipe"
            android:summary="@string/swipeNotifsSummary"
            android:title="@string/swipeNotifs" />
    </com.jenzz.materialpreference.PreferenceCategory>

    <com.jenzz.materialpreference.PreferenceCategory
        android:key="pref_key_appearance"
        android:title="@string/appearance">

        <com.jenzz.materialpreference.Preference
            android:key="pref_theme"
            android:title="@string/theme_title"
            android:summary="@string/theme_summary"/>

        <com.jenzz.materialpreference.Preference
            android:key="pref_update_icon"
            android:title="@string/update_logo"
            android:summary="@string/update_to_match"/>

        <com.jenzz.materialpreference.Preference
            android:key="pref_accent"
            android:summary="@string/accent_color_summary"
            android:title="@string/accent_color" />

        <com.jenzz.materialpreference.Preference
            android:key="pref_default_icon_color"
            android:summary="@string/default_icons_color_summary"
            android:title="@string/default_icons_color" />
    </com.jenzz.materialpreference.PreferenceCategory>

    <com.jenzz.materialpreference.PreferenceCategory
        android:key="pref_key_other"
        android:title="@string/other">

        <com.jenzz.materialpreference.Preference android:key="pref_default_note_type"
            android:title="@string/default_note_type"
            android:summary="@string/default_note_type_summary"/>

        <com.jenzz.materialpreference.Preference android:key="pref_default_led_color"
            android:title="@string/default_led_color"/>

        <com.jenzz.materialpreference.SwitchPreference
            android:defaultValue="false"
            android:key="pref_cursor"
            android:summary="@string/default_cursor_summary"
            android:title="@string/default_cursor" />

        <com.jenzz.materialpreference.Preference android:key="pref_font"
            android:title="@string/font"/>

        <com.jenzz.materialpreference.SwitchPreference
            android:defaultValue="false"
            android:key="pref_shortcut"
            android:summary="@string/shortcut_summary"
            android:title="@string/shortcut" />

        <com.jenzz.materialpreference.SwitchPreference
            android:key="pref_cm_quick_tile"
            android:summary="@string/cm_quick_tile_summary"
            android:title="@string/cm_quick_tile" />

        <com.jenzz.materialpreference.SwitchPreference
            android:defaultValue="true"
            android:key="pref_keyboard"
            android:summary="@string/open_keyboard_summary"
            android:title="@string/open_keyboard" />

        <com.jenzz.materialpreference.SwitchPreference
            android:defaultValue="false"
            android:key="pref_use_colored_icons"
            android:summary="@string/use_colored_icons_summary"
            android:title="@string/use_colored_icons" />

        <com.jenzz.materialpreference.SwitchPreference
            android:defaultValue="false"
            android:key="pref_large_icons"
            android:summary="@string/large_icons_summary"
            android:title="@string/large_icons"
            android:dependency="pref_use_colored_icons" />
    </com.jenzz.materialpreference.PreferenceCategory>
</PreferenceScreen>
