<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.jenzz.materialpreference.Preference android:key="pref_changelog"
        android:title="@string/changelog"
        android:summary="@string/changelogSummary"/>

    <com.jenzz.materialpreference.Preference android:key="pref_open_source_licenses"
        android:title="@string/opensource"
        android:summary="@string/opensourceSummary"/>

    <com.jenzz.materialpreference.Preference android:key="pref_translations"
        android:title="@string/translations"
        android:summary="@string/translations_summary"/>

    <com.jenzz.materialpreference.Preference android:key="pref_github"
        android:title="@string/github"
        android:summary="@string/githubSummary"/>

    <com.jenzz.materialpreference.Preference android:key="pref_contact"
        android:title="@string/contact"
        android:summary="@string/email"/>

    <com.jenzz.materialpreference.Preference android:key="pref_rate"
        android:title="@string/rate"
        android:summary="@string/rateSummary"/>

    <!--<com.jenzz.materialpreference.Preference android:key="pref_pro"-->
        <!--android:title="@string/pro"/>-->

    <com.jenzz.materialpreference.Preference android:key="pref_ver_num"
        android:title="@string/verNum"
        android:summary="@string/version"/>
</PreferenceScreen>
