<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:key="pref_key_general_settings"
        android:title="@string/notifications">

        <Preference android:key="pref_click_notif"
            android:title="@string/notifClick"
            android:summary="@string/notifClickSummary"/>

        <Preference android:key="pref_priority"
            android:title="@string/priority"
            android:summary="@string/prioritySummary"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_swipe"
            android:summary="@string/swipeNotifsSummary"
            android:title="@string/swipeNotifs" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_appearance"
        android:title="@string/appearance">

        <Preference
            android:key="pref_theme"
            android:title="@string/theme_title"
            android:summary="@string/theme_summary"/>

        <Preference
            android:key="pref_update_icon"
            android:title="@string/update_icon"
            android:summary="@string/update_to_match"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_other"
        android:title="@string/other">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_enter"
            android:summary="@string/enterToSendSummary"
            android:title="@string/enterToSend" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_pro"
        android:title="@string/pro_options">

        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="pref_shortcut"
            android:summary="@string/shortcut_summary"
            android:title="@string/shortcut" />
    </PreferenceCategory>

</PreferenceScreen>
